--- a/locaçaoregiaodoslagos/Hostelforteprincipal.html
+++ b/locaçaoregiaodoslagos/Hostelforteprincipal.html
@@ -18,15 +18,15 @@
         </section>
 
         <div class="exemplo">
-            <img src="imagens/Aptcabofrio/AptForte.jpeg" alt="" style="height: 600px; margin-left: 50px; margin-top: 20px; margin-right: 10px;">
+            <img src="imagens/Casaprincipalforte/Entrada_casa_forte_principal.jpeg" alt="" style="height: 600px; margin-left: 50px; margin-top: 20px; margin-right: 10px;">
             <div class="minis" style="margin-top: 20px;">
-                <img src="imagens/Aptcabofrio/Aptfortecozinha.jpeg" alt="" style="height: 295px; margin-bottom: 10px;">
-                <img src="imagens/Aptcabofrio/Aptfortesala.jpeg" alt="" style="height: 295px;">
+                <img src="imagens/Casaprincipalforte/Quarto_forte_principal_1.jpeg" alt="" style="height: 295px; margin-bottom: 10px;">
+                <img src="imagens/Casaprincipalforte/Quarto_forte_principal_2.jpeg" alt="" style="height: 295px;">
             </div>
             <section>
                 <a href="https://wa.me/5522981128872" class="contato" style="font-size: 30px; color: white;">Entre em contato</a>
-                <a href="https://maps.app.goo.gl/8qkLJ3DZ96gkscDL6">
-                    <h2 class="local">Local: Edificio gisele<br>centro de Cabo Frio<br>proximo a praia(clique aqui)</h2>
+                <a href="https://maps.app.goo.gl/nWPwrcJ7Xho4f2dK7">
+                    <h2 class="local">Local: Centro de Cabo Frio <br>proximo a praia(clique aqui)</h2>
                 </a>
             </section>
             
