--- a/locaçaoregiaodoslagos/inicial.html
+++ b/locaçaoregiaodoslagos/inicial.html
@@ -38,12 +38,12 @@
             <div class="flex">
                 <h1>Hostel praia do Forte</h1>
                 <p>Casa maior, valor a discutir</p>
-                <a href="Casapero.html"><button class="botao">Ver mais</button></a>
+                <a href="Hostelforteprincipal.html"><button class="botao">Ver mais</button></a>
             </div>
             <div class="flex">
                 <h1>Hostel praia do Forte</h1>
                 <p>Casa menor, valor a discutir</p>
-                <a href="Aptforte.html"><button class="botao">Ver mais</button></a>
+                <a href="Hostelfortemenor.html"><button class="botao">Ver mais</button></a>
             </div>
         </div>
     </main>
